--- a/awesum-web/src/app/app.component.scss
+++ b/awesum-web/src/app/app.component.scss
@@ -6,9 +6,10 @@ $buttonColor: #b3ffc4;
 
   li {
     display: inline-block;
-    padding: 4px;
+    padding: 4px 16px;
     background-color: $buttonColor;
     margin: 0 8px;
+    border-radius: 2px;
     cursor: pointer;
 
     &:hover {
@@ -18,10 +19,9 @@ $buttonColor: #b3ffc4;
     &.selected {
       background-color: darken($buttonColor, 50%);
     }
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
   }
-}
-
-.stars-count {
-  text-align: right;
-  font-weight: bold;
 }
